<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/ic_menu_home"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_pembelajaran"
        android:title="@string/pembelajaran"
        android:icon="@drawable/ic_menu_pembelajaran"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_forum_diskusi"
        android:title="@string/forum_diskusi"
        android:icon="@drawable/ic_menu_forum_diskusi"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_chat"
        android:title="@string/chat"
        android:icon="@drawable/ic_menu_chat"
        app:showAsAction="always" />

</menu>