<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_300"
    tools:context=".ui.introduction.fragment.ExperienceFragment">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction_question_2"
        android:textSize="28sp"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/white"
        android:layout_marginTop="22dp"
        android:layout_marginHorizontal="29dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_option_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/experience_image_option_1"
        android:text="@string/introduction_experience_answer_1"
        android:textAlignment="center"
        android:gravity="center|end"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:drawablePadding="32dp"
        android:fontFamily="@font/inter_bold"
        android:textSize="19sp"
        android:textColor="@color/solid_black"
        android:layout_marginTop="36dp"
        android:background="@drawable/introduction_experience_answer_option_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        app:layout_constraintStart_toStartOf="@id/tv_question"
        app:layout_constraintEnd_toEndOf="@id/tv_question"/>

    <TextView
        android:id="@+id/tv_option_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/experience_image_option_2"
        android:text="@string/introduction_experience_answer_2"
        android:textAlignment="center"
        android:gravity="center|end"
        android:drawablePadding="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:fontFamily="@font/inter_bold"
        android:textSize="19sp"
        android:textColor="@color/solid_black"
        android:layout_marginTop="24dp"
        android:background="@drawable/introduction_experience_answer_option_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_option_1"
        app:layout_constraintStart_toStartOf="@id/tv_option_1"
        app:layout_constraintEnd_toEndOf="@id/tv_option_1"/>

    <TextView
        android:id="@+id/tv_option_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/experience_image_option_3"
        android:text="@string/introduction_experience_answer_3"
        android:textAlignment="center"
        android:gravity="center|end"
        android:drawablePadding="38dp"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:fontFamily="@font/inter_bold"
        android:textSize="19sp"
        android:textColor="@color/solid_black"
        android:layout_marginTop="24dp"
        android:background="@drawable/introduction_experience_answer_option_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_option_2"
        app:layout_constraintStart_toStartOf="@id/tv_option_2"
        app:layout_constraintEnd_toEndOf="@id/tv_option_2"/>

    <TextView
        android:id="@+id/tv_option_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/experience_image_option_4"
        android:text="@string/introduction_experience_answer_4"
        android:textAlignment="center"
        android:gravity="center|end"
        android:drawablePadding="42dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:fontFamily="@font/inter_bold"
        android:textSize="19sp"
        android:textColor="@color/solid_black"
        android:layout_marginTop="24dp"
        android:background="@drawable/introduction_experience_answer_option_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_option_3"
        app:layout_constraintStart_toStartOf="@id/tv_option_3"
        app:layout_constraintEnd_toEndOf="@id/tv_option_3"/>

    <TextView
        android:id="@+id/tv_option_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/experience_image_option_5"
        android:text="@string/introduction_experience_answer_5"
        android:textAlignment="center"
        android:gravity="center|end"
        android:drawablePadding="42dp"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:fontFamily="@font/inter_bold"
        android:textSize="19sp"
        android:textColor="@color/solid_black"
        android:layout_marginTop="24dp"
        android:background="@drawable/introduction_experience_answer_option_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_option_4"
        app:layout_constraintStart_toStartOf="@id/tv_option_4"
        app:layout_constraintEnd_toEndOf="@id/tv_option_4"/>


</androidx.constraintlayout.widget.ConstraintLayout>